# pynwa

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pynwa/: BasicDataFetch.py  __init__.py  cli.py  config.yml  helper_funcs.py
tests/: __init__.py  test_pynwa.py
