[tool.poetry]
name = "pynwa"
version = "0.1.0"
description = "Package for Liverpool data analysis"
authors = ["Tim Velasquez <tvelasquez@veoride.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.2"
requests = "^2.31.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
